# m2b-code-interpreter

./: LICENSE  README.md  example.py  openai_example.py  pyproject.toml
src/m2b_code_interpreter/: __init__.py  code_interpreter_sync.py  driver.py  exceptions.py  models.py
tests/: test_sandbox.py
